# power-profiles-cfg

./: .gitignore  01power-profiles-cfg  01power-profiles-cfg.in  Cargo.toml  Makefile  Makefile.in  README.md  build.rs  configure  configure.ac  power-profiles-cfg-sleep.sh  power-profiles-cfg-sleep.sh.in  power-profiles-cfg.service  power-profiles-cfg.service.in
src/: cli.rs  main.rs  profile.rs  sysfs_interface.rs
