[package]
name = "power-profiles-cfg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = "0.9.7"
ron = "0.8.0"
serde = { version = "1.0.163", features = ["derive"] }
clap = { version = "4.2.7", features = ["derive", "cargo", "env"] }
num_cpus = "1.15.0"

[build-dependencies]
clap = { version = "4.2.7", features = ["derive", "cargo", "env"] }
clap_mangen = "0.2.10"
